Implement manual SQL schema creation and clean volumes

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
   "not_verified": "Your email is not verified yet!",
   "logout_success": "Successfully logged out!",
   "welcome": "Hello dear user!\n\nPlease enter your ID number:",
-  "start": "Hello {name}!👋\n\nYou have contacted the Najot Ta'lim bot.\n\nPlease leave your appeal:",
+  "start": "Hello {name}!👋\n\nYou have contacted the Intellectual Progress Star bot.\n\nPlease leave your appeal:",
   "enter_text": "Please enter text only!",
   "incorrect_id": "The ID number is incorrect!",
   "request_received": "Your appeal has been delivered!",
@@ -37,6 +37,11 @@
     "error_internal_server": "Internal server error.",
     "not_found_result": "No results found by this search..."
   },
+  "centers_not_found": "Centers not found.",
+  "center_not_found": "Center not found.",
+  "center_created": "Center created",
+  "center_updated": "Center updated",
+  "center_deleted": "Center deleted",
   "students_not_found": "Students not found.",
   "student_not_found": "Student not found.",
   "added_to_group": "You have been added to {{group_subject}} group.",
