--- a/locales/uz.json
+++ b/locales/uz.json
@@ -12,7 +12,7 @@
   "not_verified": "Sizning emailingiz hali tasdiqlanmagan!",
   "logout_success": "Tizimdan muvaffaqiyatli chiqdingiz!",
   "welcome": "Assalomu alaykum hurmatli foydalanuvchi!\n\nIltimos, ID raqamingizni kiriting:",
-  "start": "Assalomu alaykum {name}!👋\n\nSiz Najot ta'lim botiga murojaat qildingiz.\n\nMurojaatingizni yozib qoldiring:",
+  "start": "Assalomu alaykum {name}!👋\n\nSiz Intellectual Progress Star o'quv markazi botiga murojaat qildingiz.\n\nMurojaatingizni yozib qoldiring:",
   "enter_text": "Iltimos, faqatgina matn kiriting!",
   "incorrect_id": "ID raqam noto'g'ri kiritildi!",
   "request_received": "Murojaatingiz yetkazildi!",
@@ -37,6 +37,11 @@
     "error_internal_server": "Ichki server xatosi.",
     "not_found_result": "Ushbu qidiruv bo'yicha hech qanday natija topilmadi..."
   },
+  "centers_not_found": "Markazlar topilmadi",  
+  "center_not_found": "Markaz topilmadi",
+  "center_created": "Markaz yaratildi",
+  "center_updated": "Markaz yangilandi",
+  "center_deleted": "Markaz o'chirildi",
   "students_not_found": "Talabalar topilmadi.",
   "student_not_found": "Talaba topilmadi.",
   "added_to_group": "Siz {{group_subject}} guruhiga qo‘shildingiz.",
