--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,6 +1,6 @@
 {
   "welcome": "Здравствуйте, уважаемый пользователь!\n\nПожалуйста, введите свой идентификационный номер:",
-  "start": "Здравствуйте {name}!👋\n\nВы обратились к боту Najot Ta'lim.\n\nПожалуйста, оставьте свое обращение:",
+  "start": "Здравствуйте {name}!👋\n\nВы обратились к боту Intellectual Progress Star.\n\nПожалуйста, оставьте свое обращение:",
   "enter_text": "Пожалуйста, вводите только текст!",
   "incorrect_id": "Идентификационный номер введен неправильно!",
   "request_received": "Ваше обращение доставлено!",
@@ -37,6 +37,11 @@
     "error_internal_server": "Внутренняя ошибка сервера.",
     "not_found_result": "По данному запросу ничего не найдено..."
   },
+  "centers_not_found": "Центры не найдены",
+  "center_not_found": "Центр не найдены",
+  "center_created": "Центр был создан",
+  "center_updated": "Центр был обновлен",
+  "center_deleted": "Центр удален",
   "students_not_found": "Студенты не найдены.",
   "student_not_found": "Студент не найден.",
   "added_to_group": "Вы был добавлен в группу {{group_subject}}.",
