added new features

--- a/locales/en.json
+++ b/locales/en.json
@@ -20,11 +20,20 @@
   "error": "An error occurred. Please try again later.",
   "no_appeals_today": "No appeals found today",
   "no_appeals_last_10_days": "No appeals found in the last 10 days",
-  "groups_not_found": "Groups not found.",
-  "group_not_found": "Group not found.",
-  "group_created": "Group successfully created!",
-  "group_updated": "Group successfully updated!",
-  "group_deleted": "Group deleted!",
+"rooms_not_found": "No rooms found",
+  "room_not_found": "Room not found",
+  "room_created": "Room successfully created",
+  "room_updated": "Room successfully updated",
+  "room_deleted": "Room successfully deleted",
+  "room_conflict": "Selected room is occupied at this time",
+  "missing_parameters": "Missing required parameters",
+  "invalid_days": "Invalid days format",
+  "teacher_not_found": "Teacher not found",
+  "groups_not_found": "No groups found",
+  "group_not_found": "Group not found",
+  "group_created": "Group successfully created",
+  "group_updated": "Group successfully updated",
+  "group_deleted": "Group successfully deleted",
   "notifications_not_found": "Notifications not found.",
   "notification_not_found": "Notification not found.",
   "notification_updated": "Notification has been marked as read!",
