--- a/locales/uz.json
+++ b/locales/uz.json
@@ -20,11 +20,20 @@
   "no_appeals_today": "Bugungi appeals topilmadi",
   "no_appeals_last_10_days": "Oxirgi 10 kun ichida hech qanday murojaat topilmadi",
   "server_error": "Serverda xatolik yuz berdi",
-  "groups_not_found": "Guruhlar topilmadi.",
-  "group_not_found": "Guruh topilmadi.",
-  "group_created": "Guruh muvaffaqiyatli yaratildi!",
-  "group_updated": "Guruh muvaffaqiyatli yangilandi!",
-  "group_deleted": "Guruh o'chirildi!",
+"rooms_not_found": "Xonalar topilmadi",
+  "room_not_found": "Xona topilmadi",
+  "room_created": "Xona muvaffaqiyatli yaratildi",
+  "room_updated": "Xona muvaffaqiyatli yangilandi",
+  "room_deleted": "Xona muvaffaqiyatli o‘chirildi",
+  "room_conflict": "Tanlangan xona bu vaqtda band",
+  "missing_parameters": "Kerakli parametrlar kiritilmadi",
+  "invalid_days": "Noto‘g‘ri kunlar formati",
+  "teacher_not_found": "O‘qituvchi topilmadi",
+  "groups_not_found": "Guruhlar topilmadi",
+  "group_not_found": "Guruh topilmadi",
+  "group_created": "Guruh muvaffaqiyatli yaratildi",
+  "group_updated": "Guruh muvaffaqiyatli yangilandi",
+  "group_deleted": "Guruh muvaffaqiyatli o‘chirildi",
   "notifications_not_found": "Bildirishnomalar topilmadi.",
   "notification_not_found": "Bildirishnoma topilmadi.",
   "notification_updated": "Bildirishnoma o'qilgan deb belgilandi!",
